--- a/Languages.css
+++ b/Languages.css
@@ -99,6 +99,8 @@
     position: absolute;
     top: 0;
     left: 0;
-    opacity: .85;
+    /*opacity: .85;*/
+    opacity: 0;
+    transition: opacity .35s ease-in-out;
     display: none;
 }
