--- a/Languages.css
+++ b/Languages.css
@@ -76,6 +76,7 @@
     color: var(--text-color);
     font-family: Calibri, sans-serif;
     font-size: 14px;
+    opacity: .8;
     @media(max-width: 550px){
         font-size: 11px;
     }
