--- a/Languages.css
+++ b/Languages.css
@@ -93,8 +93,8 @@
 }
 #blackBox{
     background-color: black;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     z-index: 150;
     position: absolute;
     top: 0;
@@ -102,5 +102,9 @@
     /*opacity: .85;*/
     opacity: 0;
     transition: opacity .35s ease-in-out;
+    display: none;
+}
+
+.langImagesCollection, .langIconsCollection{
     display: none;
 }
