--- a/style.css
+++ b/style.css
@@ -97,9 +97,11 @@ body{
 }
 .card p{
     text-align: center;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 25px;
+    padding-right: 25px;
     height: 80px;
+    /*font-family: Roboto, sans-serif;
+    font-size: 13px;/**/
 }
 .icons{
     width: 150px;
