--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 html{
     scrollbar-color: transparent transparent;
     scrollbar-width: none;
@@ -12,6 +18,8 @@ html{
     --card-shadow: none;
     --card-glow: 0 0  40px blueviolet;
     --watermark: rgba(138, 43, 226, .5);
+    --font1: "Open Sans", sans-serif;
+    --font2: "Roboto", sans-serif;
 }
 body{
     background-color: var(--bg-color);
@@ -26,6 +34,8 @@ body{
     color: var(--text-color);
     z-index: 100;
     user-select: none;
+    font-family: var(--font1);
+
 }
 .header h1{
     display: flex;
@@ -34,9 +44,9 @@ body{
 }
 .header h3{
     position: absolute;
-    top: 6px;
+    top: 13px;
     left: 5%;
-    font-size: 22px;
+    font-size: 18px;
     color: var(--watermark);
 }
 #home{
@@ -94,14 +104,18 @@ body{
     font-size: 28px;
     color: var(--project-name-color);
     user-select: none;
+    font-family: var(--font1);
+    font-weight: normal;
+
 }
 .card p{
     text-align: center;
     padding-left: 25px;
     padding-right: 25px;
     height: 80px;
-    /*font-family: Roboto, sans-serif;
-    font-size: 13px;/**/
+    font-family: var(--font2);
+    font-size: 15px;
+    font-weight: normal;
 }
 .icons{
     width: 150px;
